--- a/src/main/resources/templates/order/cart.html
+++ b/src/main/resources/templates/order/cart.html
@@ -49,7 +49,7 @@
 			<div class="d-flex"><!--  장바구니 정보- 배송정보 전체 묶는 div-->
 
 				<div>
-					<div th:each="cart:${cartList}">
+					<div th:each="cart:${cartList.cartDTOList}">
 						<div class="cart-box d-flex align-items-center p-1 border"> <!-- 책 정보부분 (++++ ) -->
 							<div th:each="item : ${cart.bookInfo.item}"> <!-- 닫기버튼 포함한 책 정보 묶는 div -->
 								<button type="button" class="close deleteBtn" th:data-cart-id="${cart.id}"> <!--  닫기버튼  -->
@@ -66,13 +66,13 @@
 										<div class="d-flex mt-2">
 											<div class="text-success font-weight-bold mr-2" th:text="|(${item.discount}%)|">할인율</div>
 											<del><div th:text="|${#numbers.formatInteger(item.priceStandard, 3, 'COMMA')} 원|">정가</div></del>
-											<div class="font-weight-bold mx-1" th:text="|${#numbers.formatInteger(item.priceSales, 3, 'COMMA')} 원|" th:data-price-id="${item.priceSales}">판매가</div>
+											<div class="font-weight-bold mx-1" th:text="|${#numbers.formatInteger(item.priceSales, 3, 'COMMA')} 원|">판매가</div>
 											<div th:text="|(${#numbers.formatInteger(item.mileage, 3, 'COMMA')} point)|">point</div>
 										</div>
 									</div>
 									<div class="d-flex align-items-center justify-content-center cart-price">
 										<div>
-											<h6 class="font-weight-bold  text-center my-4" th:text="|${#numbers.formatInteger(item.priceSales, 3, 'COMMA')} 원|">18,000 원</h6>
+											<h6 class="font-weight-bold  text-center my-4" id="price" th:text="|${#numbers.formatInteger(item.priceSales, 3, 'COMMA')} 원|">18,000 원</h6>
 											<div class="d-flex align-items-center justify-content-center bg-light border rounded border-secondary">
 												<button type="button" class="btn btn-0 subBtn" th:data-cart-id="${cart.id}" th:data-quantity-id="${cart.quantity}">-</button>
 												<div class="mx-1 qty" th:text="${cart.quantity}">1</div>
@@ -106,10 +106,7 @@
 					<table class="table table-borderless">
 						<tr>
 							<th>상품 금액</th>
-							<!-- 
-							<td  th:text="|${#numbers.formatInteger(totalPrice, 3, 'COMMA')} 원|">0000원</td>
-							 -->
-							<td  >0000원</td>
+							<td th:text="|${#numbers.formatInteger(cartList.totalPrice, 3, 'COMMA')} 원|"> >0000원</td>
 						</tr>
 						<tr>
 							<th>배송비</th>
@@ -117,7 +114,7 @@
 						</tr>
 						<tr>
 							<th>상품 할인</th>
-							<td>0000원</td>
+							<td th:text="|${#numbers.formatInteger(cartList.totalDiscount, 3, 'COMMA')} 원|">0000원</td>
 						</tr>
 						<tr class=" border-top">
 							<th>결제 예정 금액</th>
@@ -125,10 +122,7 @@
 						</tr>
 						<tr>
 							<th>적립 예정 포인트</th>
-							<!-- 
-							<td th:text="|${#numbers.formatInteger(totalPoints, 3, 'COMMA')} 원|">000 point</td>
-							 -->
-							<td>000 point</td>
+							<td th:text="|${#numbers.formatInteger(cartList.totalPoints, 3, 'COMMA')} point|">000 point</td>
 						</tr>
 					</table>
 						<button type="button" class="btn btn-primary my-3 w-100">구매하기</button>
@@ -213,7 +207,9 @@
 //				alert("++!!")
 				let cartId = $(this).data("cart-id");
 				let quantity = $(this).data("quantity-id");
+				
 				quantity++;
+				
 				$(this).data("quantity-id", quantity); // 업데이트된 수량 저장
 			    $(this).siblings(".qty").text(quantity); // 화면에 수량 반영
 				
