[배지현] - 메인 화면 수정중

--- a/src/main/resources/templates/books/main.html
+++ b/src/main/resources/templates/books/main.html
@@ -18,14 +18,39 @@
 				
 				</div>
 				
-				<div class="d-flex my-4 justify-content-between"> 
-					<div class="bg-secondary seller-info">
-						<div>베스트셀러</div>
+					<div class="bg-info">
+						<h2 class="font-weight-bold">새로 나온 도서</h2>
+						<div class="d-flex"> <!--  리스트 옆으로 출력시키기 위함임 -->
+								<div>
+									<img src="/static/image/car.jpg" class="info-img">
+									<h5 class="font-weigh-bold">책이름</h5>
+									<span>작가 이름</span>
+									<span>출판사 이름</span>
+								</div>
+							</div>
 					</div>
-					<div class="bg-warning seller-info">
-						<div>신간</div>
+					<div class="bg-secondary">
+						<h2 class="font-weight-bold">베스트셀러</h2>
+						<div class="d-flex"> <!--  리스트 옆으로 출력시키기 위함임 -->
+								<div>
+									<img src="/static/image/car.jpg" class="info-img">
+									<h5 class="font-weigh-bold">책이름</h5>
+									<span>작가 이름</span>
+									<span>출판사 이름</span>
+								</div>
+							</div>
 					</div>
-				</div>
+					<div class="bg-warning ">
+						<h2 class="font-weight-bold">화제의 신간</h2>
+							<div class="d-flex"> <!--  리스트 옆으로 출력시키기 위함임 -->
+								<div>
+									<img src="/static/image/car.jpg" class="info-img">
+									<h5 class="font-weigh-bold">책이름</h5>
+									<span>작가 이름</span>
+									<span>출판사 이름</span>
+								</div>
+							</div>
+					</div>
 				
 		
 		
