[배지현] - 베스트셀러 오류 수정 완료 #11

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -246,6 +246,14 @@ color: #7CC491;
 	text-align: center;
 	margin-right:4px;
 }
+.chevron{
+	width:20px;
+	height:20px;
+	font-weight: bold;
+	font-size: 14px;
+	text-align: center;
+	margin-right:4px;
+}
 
 .outline{
 	border:solid 1px #E7E5E5;
