--- a/src/main/resources/templates/books/best-seller.html
+++ b/src/main/resources/templates/books/best-seller.html
@@ -82,11 +82,11 @@
 					<div class="mx-3 info-price" th:if="${book.stockStatus =='절판'}">절판</div>
 					<div class="mx-3 info-price" th:if="${book.stockStatus ==''  or book.stockStatus =='예약판매'}">
 					 -->
-				 <div>
+				 <div class="text-center info-price p-1">
 					<del><span th:text="|${#numbers.formatInteger(book.priceStandard, 3, 'COMMA')} 원|">정가 </span></del>
-				<span class="text-success font-weight-bold h6" th:text="|(${book.discount}%)|">(10%)</span> 
-				<span class="font-weight-bold text-primary ml-1" th:text="|${#numbers.formatInteger(book.priceSales, 3, 'COMMA')} 원|">할인가</span>
-				<div class="font-weight-bold text-info ml-1 text-small" th:text="|(${#numbers.formatInteger(book.mileage, 3, 'COMMA')} point)|">포인트</div>
+					<span class="text-success font-weight-bold h6" th:text="|(${book.discount}%)|">(10%)</span> 
+					<div class="font-weight-bold text-primary ml-1" th:text="|${#numbers.formatInteger(book.priceSales, 3, 'COMMA')} 원|">할인가</div>
+					<div class="font-weight-bold text-info ml-1 text-small" th:text="|(${#numbers.formatInteger(book.mileage, 3, 'COMMA')} point)|">포인트</div>
 				</div>
 				<div class="info-cart" >
 					<div class="text-center my-3">
@@ -122,10 +122,19 @@ $(document).ready(function(){
 		var now_year = now.getFullYear();
 		var now_month = now.getMonth() + 1;
 		
+		let year = $("#yearSel").val(); 
+	    let month = $("#monthSel").val(); 
+	    let week = $("#weekSel").val();
 		
 		// 2005년 부터 올해까지
 		for(var i = now_year; i >= 2005; i--){
-		$("#yearSel").append("<option value='"+ i +"'>"+ i + " 년" +"</option>");
+		
+			if(i === now_year){
+				$("#yearSel").append("<option value='" + i + "'>" + i + " 년" + "</option>");
+			} 
+			else {
+				$("#yearSel").append("<option value='"+ i +"'>"+ i + " 년" +"</option>");
+			}
 		}
 		// 월
 		for(var i = 1; i <= 12; i++){
@@ -152,12 +161,11 @@ $(document).ready(function(){
 		location.href = baseUrl 
 	        + "?maxResults=" + maxResults 
 	        + "&outofStock=" + outofStock
-	        + "&Year=" + year
-	        + "&Month=" + month
-	        + "&Week=" + week;
+	        + "&year=" + year
+	        + "&month=" + month
+	        + "&week=" + week;
 //	        );
 //		$(this).siblings(".week-info").text(`${year}년 ${month}월 ${week}주`);
-	    $(".week-info").text(`${year}년 ${month}월 ${week}주`);
 /*	    
 	    $.ajax({
 				type:"get"
@@ -252,7 +260,7 @@ $(document).ready(function(){
 	
 
 	
-	/*
+/*
 	
 	$("#maxResultSel").on("change",function(){
         maxResults = $(this).val() || 10;
